k8s/circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3d
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: circuit-breaker-service
spec:
  host: nodeserver-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
  subsets:
    - name: all
      labels:
        app: nodeserver

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-vs
spec:
  hosts:
  - "*"
  gateways:
    - "ingress-gateway-k3d"
  http:
    - route:
      - destination:
          host: nodeserver-service
          subset: all
