k8s/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-vs
spec:
  hosts:
  - nodeserver-service
  http:
    - route:
      - destination:
          host: nodeserver-service
          subset: A
        weight: 90
      - destination:
          host: nodeserver-service
          subset: B
        weight: 10
